--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 
     <title>Babylon.js sample code</title>
     <!-- Babylon.js -->
-    <script src="//www.babylonjs.com/hand.minified-1.2.js"></script>
-    <script src="//www.babylonjs.com/babylon.js"></script>
+    <!-- <script src="//www.babylonjs.com/hand.minified-1.2.js"></script> -->
+    <!-- <script src="//www.babylonjs.com/babylon.js"></script> -->
+    <script src="api/babylon.custom.js"></script>
     <style>
         html, body {
             overflow: hidden;
