Mobile touch support

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Babylon.js -->
     <!-- <script src="//www.babylonjs.com/hand.minified-1.2.js"></script> -->
     <!-- <script src="//www.babylonjs.com/babylon.js"></script> -->
+    <script src="api/hand.js"></script>
     <script src="api/babylon.custom.js"></script>
     <style>
         html, body {
@@ -18,7 +19,7 @@
         }
 
         #renderCanvas {
-            width: 80%;
+            width: 100%;
             height: 100%;
             touch-action: none;
         }
@@ -27,6 +28,6 @@
 <body>
     <canvas id="renderCanvas"></canvas>
     <script src="POC/Main.js"></script> 
-    <!-- <script src="importModel.js"></script> -->
+    <script src="POC/DragNDrop.js"></script>
 </body>
 </html>
