--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
 
     <title>Babylon.js sample code</title>
     <!-- Babylon.js -->
-    <!-- <script src="//www.babylonjs.com/hand.minified-1.2.js"></script> -->
-    <!-- <script src="//www.babylonjs.com/babylon.js"></script> -->
+
+    <!-- Local -->
+    <!-- <script src="http://www.babylonjs.com/hand.minified-1.2.js"></script>
+    <script src="http://www.babylonjs.com/babylon.js"></script> -->
+
+    <!-- Server -->
+    <!-- <script src="//www.babylonjs.com/hand.minified-1.2.js"></script>
+    <script src="//www.babylonjs.com/babylon.js"></script> -->
+
     <script src="api/hand.js"></script>
-    <script src="api/babylon.custom.js"></script>
+    <script src="api/babylon.2.5.noworker.js"></script>
+    <script src="api/canon.js"></script>
+
     <style>
         html, body {
             overflow: hidden;
