Collision detection and basic snapping

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <script src="//www.babylonjs.com/babylon.js"></script> -->
 
     <script src="api/hand.js"></script>
-    <script src="api/babylon.2.5.noworker.js"></script>
     <script src="api/canon.js"></script>
+    <script src="api/babylon.2.5.noworker.js"></script>
+    
 
     <style>
         html, body {
@@ -36,7 +37,11 @@
 </head>
 <body>
     <canvas id="renderCanvas"></canvas>
+
+    <script src="POC/Global.js"></script>
     <script src="POC/DragNDrop.js"></script>
+    <script src="POC/CheckCollisions.js"></script> 
     <script src="POC/Main.js"></script> 
+    
 </body>
 </html>
