higligting Mesh and Dragging after snapping

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script src="POC/Global.js"></script>
     <script src="POC/DragNDrop.js"></script>
     <script src="POC/CheckCollisions.js"></script> 
+    <script src="POC/BoundingBox.js"></script> 
     <script src="POC/Main.js"></script> 
     
 </body>
